# aoc

./: .gitignore  .pre-commit-config.yaml  Cargo.toml
2024/: Cargo.toml  benchmarks.txt  justfile
2024/daily-template/: Cargo.toml
2024/daily-template/benches/: benchmark.rs
2024/daily-template/src/: part1.rs  part2.rs
2024/day-01/: Cargo.toml
2024/day-01/benches/: benchmark.rs
2024/day-01/src/: part1.rs  part2.rs
2024/day-02/: Cargo.toml
2024/day-02/benches/: benchmark.rs
2024/day-02/src/: part1.rs  part2.rs
2024/day-03/: Cargo.toml
2024/day-03/src/: part1.rs  part2.rs
2024/day-04/: Cargo.toml
2024/day-04/benches/: benchmark.rs
2024/day-04/src/: part1.rs  part2.rs
2024/day-05/: Cargo.toml  bench-part1.txt  bench-part2.txt
2024/day-05/benches/: benchmark.rs
2024/day-05/src/: part1.rs  part2.rs
2024/day-06/: Cargo.toml  bench-part1.txt
2024/day-06/benches/: benchmark.rs
2024/day-06/src/: part1.rs  part2.rs
2024/day-07/: Cargo.toml
2024/day-07/benches/: benchmark.rs
2024/day-07/src/: part1.rs  part2.rs
2024/day-08/: Cargo.toml  bench-part1.txt  bench-part2.txt
2024/day-08/benches/: benchmark.rs
2024/day-08/src/: part1.rs  part2.rs
2024/day-09/: Cargo.toml
2024/day-09/benches/: benchmark.rs
2024/day-09/src/: part1.rs  part2.rs
2024/day-10/: Cargo.toml
2024/day-10/benches/: benchmark.rs
2024/day-10/src/: part1.rs  part2.rs
2024/day-11/: Cargo.toml
2024/day-11/benches/: benchmark.rs
2024/day-11/src/: part1.rs  part2.rs
2024/day-12/: Cargo.toml
2024/day-12/benches/: benchmark.rs
2024/day-12/src/: part1.rs  (+1 more)
(+6 files in other folders)
