[workspace]
resolver = "2"

members = [ "day-*" ]
default-members = [ "day-*" ]

[workspace.dependencies]
glam = "0.29.2"
divan = "0.1.7"
miette = { version = "7.4", features = ["fancy"] }
nom = "7.1.3"
rstest = "0.23.0"
rstest_reuse = "0.7.0"
thiserror = "2.0.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
test-log = { version = "0.2.13", default-features = false, features = [
    "trace",
] }
